# basecoat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
.claude/rules/common/: spell-out-names-in-full.md
.claude/rules/css/: prefer-tailwind-v4-shorthand.md
.claude/rules/rust/: early-return-with-question-mark.md  prefer-fn-over-closure-binding.md  prefer-result-chain-over-iife.md  skip-redundant-closure.md  use-arabic-numeral-regex.md  use-chrono-utc.md  use-hashmap-or-phf.md  use-match.md
.github/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md
crates/basecoat/: Cargo.toml
crates/basecoat-components/: Cargo.toml  build.rs
crates/basecoat-components/src/: alert.rs  badge.rs  button.rs  card.rs  combobox.rs  dialog.rs  dropdown.rs  input.rs  label.rs  lib.rs  popover.rs  select.rs  separator.rs  sidebar.rs  sub.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/basecoat-components/tests/: snapshots.rs  upstream_parity.rs
crates/basecoat-components/tests/snapshots/: snapshots__snapshot_alert_destructive.snap  snapshots__snapshot_badge_destructive.snap  snapshots__snapshot_button_default.snap  snapshots__snapshot_button_lg_destructive.snap  snapshots__snapshot_card.snap  snapshots__snapshot_dialog.snap  snapshots__snapshot_input_email.snap  snapshots__snapshot_label.snap  snapshots__snapshot_separator.snap  snapshots__snapshot_tabs.snap  snapshots__snapshot_textarea.snap  snapshots__snapshot_toast_success.snap  snapshots__snapshot_tooltip.snap
crates/basecoat-controllers/: Cargo.toml
crates/basecoat-controllers/js/: floating.js
crates/basecoat-controllers/src/: lib.rs
crates/basecoat-controllers/src/controllers/: combobox.rs  dialog.rs  dismiss.rs  dropdown.rs  floating.rs  keyboard.rs  media.rs  popover.rs  select.rs  sidebar.rs  tabs.rs  toast.rs  util.rs
crates/basecoat-controllers/tests/: web.rs
crates/basecoat-core/: Cargo.toml
crates/basecoat-core-macros/: Cargo.toml
crates/basecoat-core-macros/src/: lib.rs
crates/basecoat-core/src/: attrs.rs  children.rs  lib.rs  markup.rs
crates/basecoat-core/src/classes/: alert.rs  badge.rs  button.rs  card.rs  combobox.rs  dialog.rs  dropdown.rs  input.rs  label.rs  mod.rs  popover.rs  select.rs  separator.rs  sidebar.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/basecoat-core/src/props/: alert.rs  badge.rs  button.rs  card.rs  combobox.rs  dialog.rs  dropdown.rs  input.rs  label.rs  mod.rs  popover.rs  select.rs  separator.rs  sidebar.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/basecoat-css/: Cargo.toml  README.md  build.rs
crates/basecoat-css/assets/: basecoat.css
crates/basecoat-css/npm/: README.md  package.json
crates/basecoat-css/src/: lib.rs
crates/basecoat-leptos/: Cargo.toml  README.md
crates/basecoat-leptos/src/: lib.rs
crates/basecoat-leptos/src/components/: alert.rs  badge.rs  button.rs  card.rs  combobox.rs  dialog.rs  dropdown.rs  input.rs  label.rs  mod.rs  popover.rs  select.rs  separator.rs  sidebar.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/basecoat-leptos/tests/: csr_smoke.rs  ssr_smoke.rs
crates/basecoat-macros/: Cargo.toml  SYNTAX.md
crates/basecoat-macros-rt/: Cargo.toml
crates/basecoat-macros-rt/src/: lib.rs
crates/basecoat-macros/src/: emit.rs  lib.rs  parse.rs  props.rs
crates/basecoat-macros/tests/: fail.rs  pass.rs
crates/basecoat-macros/tests/ui/: fail_01_void_with_children.rs  fail_01_void_with_children.stderr  fail_02_dynamic_attr_block.rs  fail_02_dynamic_attr_block.stderr  fail_03_closure_binding_attr.rs  fail_03_closure_binding_attr.stderr  pass_01_simple_div.rs  pass_02_element_attrs.rs  pass_03_element_expr_attr.rs  pass_04_expr_child.rs  pass_05_fragment.rs  pass_06_self_closing.rs  pass_07_nested_elements.rs  pass_08_map_children.rs  pass_09_html_escape_text.rs  pass_10_boolean_attr.rs
crates/basecoat-rs/: Cargo.toml
crates/basecoat-rs/src/: lib.rs
crates/basecoat-smoke-tests/: Cargo.toml
crates/basecoat-smoke-tests/src/: main.rs
crates/basecoat/src/: lib.rs
examples/axum-ssr/: Cargo.toml  README.md
examples/axum-ssr/src/: main.rs
examples/leptos-fullstack/: Cargo.toml  README.md
examples/leptos-fullstack/src/: app.rs  fileserv.rs  lib.rs  main.rs
examples/leptos-fullstack/style/: main.css  tailwind.css
examples/leptos-islands/: Cargo.toml  README.md
examples/leptos-islands/src/: main.rs
examples/static-site/: Cargo.toml
examples/static-site/src/: main.rs
style/: tailwind.css
xtask/: Cargo.toml
xtask/src/: main.rs
