[workspace]
resolver = "3"
members = [
    "crates/basecoat-core",
    "crates/basecoat-core-macros",
    "crates/basecoat-components",
    "crates/basecoat-css",
    "crates/basecoat-macros",
    "crates/basecoat-macros-rt",
    "crates/basecoat-controllers",
    "crates/basecoat-leptos",
    "crates/basecoat",
    "examples/static-site",
    "examples/axum-ssr",
    "examples/leptos-islands",
    "examples/leptos-fullstack",
    "crates/basecoat-smoke-tests",
    "xtask",
]

[workspace.package]
edition = "2024"
version = "0.2.1"
license = "MIT"
authors = ["Klaus Moon <klausmoon.michael@gmail.com>"]
repository = "https://github.com/klaus-moon/basecoat-rs"

[workspace.dependencies]
# Proc-macro utilities
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
rstml = "0.12"

# WASM / web
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Web frameworks (used by examples)
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
leptos = { version = "0.8", default-features = false }

# Internal crates
basecoat-core = { path = "crates/basecoat-core", version = "0.2.1" }
basecoat-core-macros = { path = "crates/basecoat-core-macros", version = "0.2.1" }
basecoat-components = { path = "crates/basecoat-components", version = "0.2.1" }
basecoat-css = { path = "crates/basecoat-css", version = "0.2.1" }
basecoat-macros = { path = "crates/basecoat-macros", version = "0.2.1" }
basecoat-macros-rt = { path = "crates/basecoat-macros-rt", version = "0.2.1" }
basecoat-controllers = { path = "crates/basecoat-controllers", version = "0.2.1" }
basecoat-leptos = { path = "crates/basecoat-leptos", version = "0.2.1" }
basecoat = { path = "crates/basecoat", version = "0.2.1" }
