[package]
name = "basecoat-controllers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "WASM controllers for interactive basecoat-rs components"
keywords = ["wasm", "ui", "dialog", "tabs", "toast"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dialog", "tabs", "toast", "dropdown", "popover", "select", "sidebar", "combobox", "panic-hook"]
dialog = []
tabs = []
toast = []
dropdown = []
popover = []
select = []
sidebar = []
combobox = []
panic-hook = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDialogElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "Event",
    "EventInit",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "KeyboardEvent",
    "MouseEvent",
    "MouseEventInit",
    "FocusEvent",
    "NodeList",
    "Node",
    "DomTokenList",
    "DomRect",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Location",
    "console",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
