[package]
name = "basecoat-core-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro derive for basecoat-core prop structs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
