[package]
name = "basecoat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core types, prop structs, and class-string functions for basecoat-rs"
keywords = ["ui", "html", "tailwind", "components"]
categories = ["web-programming", "template-engine"]

[dependencies]
basecoat-core-macros = { workspace = true }
