[package]
name = "basecoat-macros-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Runtime helpers for the basecoat-macros rsx! proc-macro (HTML escaping)"
keywords = ["html", "escape", "runtime"]
categories = ["web-programming"]

[dependencies]
