[package]
name = "axum-ssr"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Example: Axum SSR with rsx! + WASM controllers"

[[bin]]
name = "axum-ssr"
path = "src/main.rs"

[dependencies]
basecoat-rs = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
# rsx! emits absolute paths ::basecoat_core and ::basecoat_components.
# Those crates must be direct deps (extern-prelude) of any crate using rsx!.
basecoat-core = { workspace = true }
basecoat-components = { workspace = true }
basecoat-macros-rt = { workspace = true }

