[package]
name = "leptos-fullstack"
edition.workspace = true
license.workspace = true
publish = false
description = "Example: Leptos SSR + hydration full-stack app using basecoat-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "leptos-fullstack"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
basecoat-rs = { path = "../../crates/basecoat-rs", features = ["leptos"] }
basecoat-core = { path = "../../crates/basecoat-core" }
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }

# SSR-only deps — use axum 0.8 to match leptos_axum 0.8's dependency
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
leptos_axum = { version = "0.8", optional = true }

# Hydrate-only deps
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "basecoat-rs/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "basecoat-rs/ssr",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
]

[package.metadata.leptos]
output-name = "leptos-fullstack"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
site-addr = "127.0.0.1:3001"
reload-port = 3002
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
