[package]
name = "leptos-islands"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Example: Leptos CSR components via basecoat leptos feature"

[[bin]]
name = "leptos-islands"
path = "src/main.rs"

[dependencies]
# CSR-only: the simplest path for v0.1. Full Leptos SSR requires a separate
# build pipeline (cargo-leptos, WASM target, server/client split) that is
# out of scope for this example. See the README in this directory.
basecoat = { workspace = true, features = ["csr"] }
